# Stock_project

./: .gitignore  README.md  deploy.sh  docker-compose.yml  mysql.yml  stockdata_airflow.yaml  stockdata_api.yaml  stockdata_crawler.yaml  stockdata_database.yaml  stockdata_monitoring.yaml  stockdata_portainer.yaml  stockdata_redash.yaml
airflow/dags/: stock_etl_pipeline.py
api/: Dockerfile  pyproject.toml
api/api/: config.py  main.py
crawler/: Dockerfile  README.md  pyproject.toml  scheduler.py
crawler/stockdata/: config.py  main.py
crawler/stockdata/backend/db/: __init__.py  clients.py  db.py  router.py
crawler/stockdata/crawler/: taiwan_futures_daily.py  taiwan_institutional_investor.py  taiwan_margin_short_sale.py  taiwan_share_holding.py  taiwan_stock_info.py  taiwan_stock_price.py
crawler/stockdata/schema/: dataset.py
monitoring/airflow/: statsd_mapping.yml
monitoring/grafana/dashboards/: Stockdata Monitoring-1771137270493.json
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/alerts/: alerts.yml
